# ros_quadrupedal

./: README.md
install/: local_setup.sh  setup.sh
install/anymal_description/share/ament_index/resource_index/package_run_dependencies/: anymal_description
install/anymal_description/share/ament_index/resource_index/parent_prefix_path/: anymal_description
install/anymal_description/share/anymal_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/anymal_description/share/anymal_description/cmake/: anymal_descriptionConfig-version.cmake  anymal_descriptionConfig.cmake
install/anymal_description/share/anymal_description/config/: anymal_controllers.yaml
install/anymal_description/share/anymal_description/environment/: ament_prefix_path.dsv  path.dsv
install/anymal_description/share/anymal_description/launch/: display.launch.py  gazebo.launch.py
install/anymal_description/share/anymal_description/urdf/: anymal.urdf.xacro
log/: latest_build
src/anymal_description/: CMakeLists.txt  package.xml
src/anymal_description/config/: anymal_controllers.yaml
src/anymal_description/launch/: display.launch.py  gazebo.launch.py
src/anymal_description/urdf/: anymal.urdf.xacro
src/log/: latest_list
